Correction of main

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -13,3 +13,16 @@ nav {
 	height: 25rem;
 	background-color: #000000ac;
 }
+
+/* #articles {
+	background-color: blue;
+}
+
+#home-form {
+	background-color: rgb(0, 255, 42);
+}
+
+#home-form,
+#articles {
+	height: 5rem;
+} */
